# Projet_LO21

./: .gitignore  CMakeLists.txt  README.md
doc/: Analyse_du_sujet.md  cahier_des_charges.md  présentation belote.pptx  présentation_projet_LO21.pptx  rapport_projet_LO21.docx  shéma_modularitée.docx  ~$pport_projet_LO21.docx
doc/Doxygen/html/: _b_d_connaissances_8c.html  _b_d_connaissances_8c.js  _b_d_connaissances_8c_source.html  _b_d_connaissances_8h.html  _b_d_connaissances_8h.js  _b_d_connaissances_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  fichier_8c.html  fichier_8c.js  fichier_8c_source.html  fichier_8h.html  fichier_8h.js  fichier_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  interface_8c.html  interface_8c.js  interface_8c_source.html  interface_8h.html  interface_8h.js  interface_8h_source.html  main_8c.html  main_8c_source.html  main_8h.html  main_8h.js  main_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  premisse_8c.html  (+29 more)
doc/Doxygen/latex/: _b_d_connaissances_8c.tex  _b_d_connaissances_8h.tex  annotated.tex  fichier_8c.tex  fichier_8h.tex  (+25 more)
doc/rapport/: ebauche_rapport.txt
file/: bdc.csv  ppt.csv  presentation.csv  rapport_projet_LO21.docx
src/: BDConnaissances.c  BDConnaissances.h  fichier.c  fichier.h  interface.c  interface.h  main.c  main.h  premisse.c  premisse.h  proposition.c  proposition.h  regle.c  regle.h  struct.h
